--- a/index.html
+++ b/index.html
@@ -12,6 +12,8 @@
     <link rel="stylesheet" href="https://cdn.jsdelivr.net/npm/swiper@11/swiper-bundle.min.css" />
     <link href="https://cdn.jsdelivr.net/npm/bootstrap@5.3.7/dist/css/bootstrap.min.css" rel="stylesheet"
         integrity="sha384-LN+7fdVzj6u52u30Kp6M/trliBMCMKTyK833zpbD+pXdCLuTusPj697FH4R/5mcr" crossorigin="anonymous">
+        <link href="https://unpkg.com/aos@2.3.1/dist/aos.css" rel="stylesheet">
+
     <link rel="stylesheet" href="src/css/style.css">
 </head>
 
@@ -112,7 +114,7 @@
                         <div class="slide-mg">
                             <img src="src/images/slide1.jpg" alt="">
                         </div>
-                        <div class="container-lg">
+                        <div class="container-lg " >
                             <div class="row m-0">
                                 <div class="col-lg-7 col-sm-12 col-12 p-0">
                                     <div class="slide-info">
@@ -244,7 +246,7 @@
         <section class="about">
             <div class="container-lg">
                 <div class="row m-0 align-items-center">
-                    <div class="col-lg-5 col-sm-6 col-12 p-0 order-res-2">
+                    <div class="col-lg-5 col-sm-6 col-12 p-0 order-res-2" data-aos="fade-down" data-aos-duration="1000">
                         <div class="main-title">
                             About JordanChalk
                         </div>
@@ -263,7 +265,7 @@
                         <div class="main-btn"><a href="#">Read More</a></div>
                     </div>
                     <div class="col-lg-2 col-sm-1 col-12 p-0"></div>
-                    <div class="col-lg-5 col-sm-5 col-12 p-0 order-res-1">
+                    <div class="col-lg-5 col-sm-5 col-12 p-0 order-res-1" data-aos="fade-up" data-aos-duration="1000">
                         <div class="about-mg">
                             <img src="src/images/about-mg.png" alt="about">
                         </div>
@@ -282,7 +284,7 @@
             <div class="container-lg">
                 <div class="row m-0">
                     <div class="col-12 p-0">
-                        <div class="categories-head text-center">
+                        <div class="categories-head text-center " data-aos="fade-down" data-aos-duration="1000">
                             <div class="main-title">
                                 High Quality Products
                             </div>
@@ -292,7 +294,7 @@
                         </div>
                     </div>
                 </div>
-                <div class="categories-grid">
+                <div class="categories-grid " data-aos="fade-up" data-aos-duration="1000">
                     <div class="row m-0">
                         <div class="col-lg-8 col-sm-8 col-12">
                             <div class="categories-home-cn">
@@ -383,7 +385,7 @@
             <div class="sustainability-content">
                 <div class="container-lg">
                     <div class="row m-0 align-items-center">
-                        <div class="col-lg-6 col-sm-6 col-12 p-0 order-res-2">
+                        <div class="col-lg-6 col-sm-6 col-12 p-0 order-res-2" data-aos="fade-down" data-aos-duration="1000">
                             <div class="main-title">
                                 Committed to Sustainability & Social Responsibility
                             </div>
@@ -401,7 +403,7 @@
                             <div class="main-btn"><a href="#">Read More</a></div>
                         </div>
                         <div class="col-lg-1 col-sm-1 col-12 p-0"></div>
-                        <div class="col-lg-5 col-sm-5 col-12 p-0 order-res-1">
+                        <div class="col-lg-5 col-sm-5 col-12 p-0 order-res-1 " data-aos="fade-up" data-aos-duration="1000">
                             <div class="sustainability-mg">
                                 <img src="src/images/Sustainability-certificate.png" alt="certificate">
                                 <div class="sustainability-pdf">
@@ -420,16 +422,16 @@
         <section class="media-cn">
             <div class="container-lg">
                 <div class="row m-0">
-                    <div class="col-12 p-0 text-center media-header">
+                    <div class="col-12 p-0 text-center media-header" data-aos="fade-down" data-aos-duration="1000">
                         <div class="main-title">Media & Updates</div>
                         <div class="sub-title">Stay informed with the latest news, blogs, and events.</div>
                     </div>
                 </div>
                 <div class="row m-0">
-                    <div class="col-lg-5 col-sm-5 col-12 p-0">
+                    <div class="col-lg-5 col-sm-5 col-12 p-0 " >
                         <div class="media-info-cn">
-                            <div class="media-mg">
-                                <div class="media-mg-inner">
+                            <div class="media-mg" data-aos="fade-up" data-aos-duration="1000">
+                                <div class="media-mg-inner ">
                                     <img src="src/images/news.png" alt="media">
                                 </div>
                                 <div class="news-theme-left">
@@ -463,14 +465,14 @@
                                     </svg>
                                 </div>
                             </div>
-                            <div class="sub-title">
+                            <div class="sub-title" data-aos="fade-up">
                                 News Title
                             </div>
-                            <div class="paragraph">
+                            <div class="paragraph" data-aos="fade-up" data-aos-duration="1000">
                                 Lorem ipsum dolor sit amet, consectetuer adipiscing elit, sed diam nonummy nibh euismod
                                 tincidunt ut laoreet dolore magna aliquam erat volutpat. Ut wisi enim ad minim
                             </div>
-                            <div class="main-btn">
+                            <div class="main-btn" data-aos="fade-up" data-aos-duration="1000">
                                 <a href="#">Read More</a>
                             </div>
                         </div>
@@ -478,7 +480,7 @@
                     <div class="col-lg-2 col-sm-2 col-12 p-0"></div>
                     <div class="col-lg-5 col-sm-5 col-12 p-0">
                         <div class="media-info-cn">
-                            <div class="media-mg">
+                            <div class="media-mg" data-aos="fade-up">
                                 <div class="media-mg-inner">
                                     <img src="src/images/blog.png" alt="media">
                                 </div>
@@ -501,14 +503,14 @@
                                     </svg>
                                 </div>
                             </div>
-                            <div class="sub-title">
+                            <div class="sub-title" data-aos="fade-up" data-aos-duration="1000">
                                 Blog Title
                             </div>
-                            <div class="paragraph">
+                            <div class="paragraph" data-aos="fade-up" data-aos-duration="1000">
                                 Lorem ipsum dolor sit amet, consectetuer adipiscing elit, sed diam nonummy nibh euismod
                                 tincidunt ut laoreet dolore magna aliquam erat volutpat. Ut wisi enim ad minim
                             </div>
-                            <div class="main-btn">
+                            <div class="main-btn" data-aos="fade-up">
                                 <a href="#">Read More</a>
                             </div>
                         </div>
@@ -520,16 +522,16 @@
 
         <section class="private-labeling-cn">
             <div class="private-labeling-head">
-                <div class="private-labeling-wave">
+                <div class="private-labeling-wave" >
                     <img src="src/images/private-labeling-wave.png" alt="private-labeling-wave">
                 </div>
                 <div class="container-lg">
                     <div class="row m-0">
                         <div class="col-lg-6 col-sm-12 col-12 p-0">
-                            <div class="main-title white-color">
+                            <div class="main-title white-color" data-aos="fade-down" data-aos-duration="1000" data-aos-delay="200">
                                 Grow Your Business with Private Label Manufacturing
                             </div>
-                            <div class="wave-box">
+                            <div class="wave-box" data-aos="fade-up" data-aos-duration="1000">
                                 For over two decades, Jordan Chalk has been a trusted partner for global brands,
                                 providing
                                 high-quality,
@@ -539,7 +541,7 @@
                                 their market needs.
                             </div>
                         </div>
-                        <div class="col-12 p-0">
+                        <div class="col-12 p-0" data-aos="fade-down" data-aos-duration="1000">
                             <div class="sub-title white-color text-center">
                                 Work with Jordan Chalk to:
                             </div>
@@ -549,7 +551,7 @@
             </div>
             <div class="private-labeling-body">
                 <div class="container-lg">
-                    <div class="row row-cols-2 row-cols-sm-5 row-cols-md-5 m-0">
+                    <div class="row row-cols-2 row-cols-sm-5 row-cols-md-5 m-0" data-aos="fade-up" data-aos-duration="1000">
                         <div class="col">
                             <div class="private-labeling-num-cn">
                                 <div class="private-label-number">1</div>
@@ -596,7 +598,7 @@
             <div class="private-labeling-form">
                 <div class="container-lg">
                     <div class="row m-0">
-                        <div class="col-lg-4 col-sm-4 col-12 p-0">
+                        <div class="col-lg-4 col-sm-4 col-12 p-0" data-aos="fade-down" data-aos-duration="1000" >
                             <div class="private-form-text-cn">
                                 <div class="private-form-paragraphs">
                                     <div class="paragraph">
@@ -614,7 +616,7 @@
                             </div>
                         </div>
                         <div class="col-lg-1 col-sm-1 col-12 p-0"></div>
-                        <div class="col-lg-7 col-sm-7 col-12 p-0">
+                        <div class="col-lg-7 col-sm-7 col-12 p-0" data-aos="fade-up" data-aos-duration="1000" >
                             <div class="private-label-form">
                                 <form>
                                     <input type="text" name="name" placeholder="Name" required />
@@ -719,7 +721,7 @@
                         </div>
                     </div>
 
-                    <div class="main-btn">
+                    <div class="main-btn no-hover">
                         <a href="#" class="download-btn">
 
                             Download Our Profile
@@ -863,9 +865,14 @@
     </footer>
     <script src="https://code.jquery.com/jquery-3.7.1.min.js"
         integrity="sha256-/JqT3SQfawRcv/BIHPThkBvs0OEvtFFmqPF/lYI/Cxo=" crossorigin="anonymous"></script>
-    <script src="https://cdn.jsdelivr.net/npm/bootstrap@5.3.3/dist/js/bootstrap.bundle.min.js"></script>
+    <script src="https://unpkg.com/aos@2.3.1/dist/aos.js"></script>
+        <script src="https://cdn.jsdelivr.net/npm/bootstrap@5.3.3/dist/js/bootstrap.bundle.min.js"></script>
     <script src="https://cdn.jsdelivr.net/npm/swiper@11/swiper-bundle.min.js"></script>
+    
     <script src="src/js/scripts.js"></script>
+    <script>
+  AOS.init();
+</script>
 </body>
 
 </html>
