--- a/sustainability.html
+++ b/sustainability.html
@@ -122,7 +122,7 @@
       </div>
 
       
-      <div class="sustainability-inner-1 ">
+      <div class="sustainability-inner-1  ">
 
         <div class="row align-items-center relative">
           <div class="col-lg-5 col-md-6  empowering-text">
@@ -143,7 +143,7 @@
           </div>
           <div class="col-lg-1 d-none d-lg-block"></div>
           <div class="col-lg-6 col-md-6  d-flex align-items-center ">
-            <div class="sustainability-img relative ">
+            <div class="sustainability-img sust-img-ds relative ">
               <img loading="lazy" src="src/images/img-sustainabillty-1.png.png" alt="Green Sustainability" class>
               <div class="upper-yellow">
                 <svg class="yellow-decorative" id="Layer_2" data-name="Layer 2" xmlns="http://www.w3.org/2000/svg"
@@ -208,7 +208,7 @@
           <div class="col-lg-6 col-md-6 ">
 
             <div class=" sustainability-img relative  align-items-center">
-              <img loading="lazy" src="src/images/img-sustainability-2.png" alt="Empowering Women Image">
+              <img loading="lazy" src="src/images/img-sustainabillty-2.jpg" alt="Empowering Women Image">
 
               <div class="lower-decorate">
                 <svg class="green-decorative" id="Layer_2" data-name="Layer 2" xmlns="http://www.w3.org/2000/svg"
@@ -494,7 +494,7 @@
                         </div>
                     </div>
 
-                    <div class="main-btn">
+                    <div class="main-btn no-hover">
                         <a href="#" class="download-btn">
 
                             Download Our Profile
