--- a/categories.html
+++ b/categories.html
@@ -109,13 +109,13 @@
             <div class="main-category-header">
                 <div class="container-lg">
                     <div class="row m-0 align-items-end">
-                        <div class="col-lg-6 col-sm-6 col-12 p-0 d-none d-sm-block">
+                        <div class="col-lg-7 col-sm-7 col-12 p-0 d-none d-sm-block">
                             <div class="cat-mg-cn">
                                 <img src="src/images/cat-mg-1.png" class="floating-anim" alt="">
                             </div>
                         </div>
-                        <div class="col-lg-2 col-sm-1 col-12 p-0"></div>
-                        <div class="col-lg-4 col-sm-4 col-12 p-0">
+
+                        <div class="col-lg-5 col-sm-5 col-12 p-0">
                             <div class="cat-mg-cn">
                                 <img src="src/images/cat-mg-2.png" class="floating-anim" alt="">
                             </div>
@@ -155,78 +155,124 @@
                 </div>
 
 
-                <div class="tab-content ">
+                <div class="tab-content">
+                     <div class="tab-pane active paragraph" id="tab1">
+                    <table>
+                        <tbody>
+                            <tr>
+                                <td>
+                                    <p>Our Dustless Chalk is designed to provide a superior
+                                        writing and drawing
+                                        experience with minimal mess. Here are some key benefits:
+                                        </br> </br>
+                                        Cleaner & Healthier – Produces significantly less dust
+                                        compared to traditional chalk, reducing airborne particles that can cause
+                                        allergies or
+                                        respiratory issues.
+                                        </br> </br>
+                                        Smooth Writing – Glides effortlessly on blackboards,
+                                        whiteboards, and other surfaces, ensuring clear and bold markings without
+                                        skipping or
+                                        breaking.
+                                    </p>
+                                </td>
 
-                    <div class="tab-pane active " id="tab1">
-                        <div class="row d-flex align-items-start">
-                            <p class="paragraph col-lg-5 col-md-6">Our Dustless Chalk is designed to provide a superior
-                                writing and drawing
-                                experience with minimal mess. Here are some key benefits:
-                                </br> </br>
-                                Cleaner & Healthier – Produces significantly less dust
-                                compared to traditional chalk, reducing airborne particles that can cause allergies or
-                                respiratory issues.
-                                </br> </br>
-                                Smooth Writing – Glides effortlessly on blackboards,
-                                whiteboards, and other surfaces, ensuring clear and bold markings without skipping or
-                                breaking.
-                            </p>
+                                <td>
+                                    <p>Our Dustless Chalk is designed to provide a superior
+                                        writing and drawing
+                                        experience with minimal mess. Here are some key benefits:
+                                        </br> </br>
+                                        Cleaner & Healthier – Produces significantly less dust
+                                        compared to traditional chalk, reducing airborne particles that can cause
+                                        allergies or
+                                        respiratory issues.
+                                        </br> </br>
+                                        Smooth Writing – Glides effortlessly on blackboards,
+                                        whiteboards, and other surfaces, ensuring clear and bold markings without
+                                        skipping or
+                                        breaking.
+                                    </p>
+                                </td>
+                                <td>
+                                    <p>Our Dustless Chalk is designed to provide a superior
+                                        writing and drawing
+                                        experience with minimal mess. Here are some key benefits:
+                                        </br> </br>
+                                        Cleaner & Healthier – Produces significantly less dust
+                                        compared to traditional chalk, reducing airborne particles that can cause
+                                        allergies or
+                                        respiratory issues.
+                                        </br> </br>
+                                        Smooth Writing – Glides effortlessly on blackboards,
+                                        whiteboards, and other surfaces, ensuring clear and bold markings without
+                                        skipping or
+                                        breaking.
+                                    </p>
+                                </td>
+                            </tr>
+                        </tbody>
 
-                            <div class="col-lg-1 d-none  d-lg-block"></div>
-                            <p class="paragraph col-lg-5 col-md-6">Long-Lasting & Durable – Made with high-quality
-                                materials for enhanced durability, reducing frequent breakage and ensuring extended
-                                use.</br> </br>
+                    </table>
+                    </div>
+                     <div class="tab-pane paragraph" id="tab2">
+                    <table >
+                        <tbody>
+                            <tr>
+                                <td>
+                                    <p>Our Dustless Chalk is designed to provide a superior
+                                        writing and drawing
+                                        experience with minimal mess. Here are some key benefits:
+                                        </br> </br>
+                                        Cleaner & Healthier – Produces significantly less dust
+                                        compared to traditional chalk, reducing airborne particles that can cause
+                                        allergies or
+                                        respiratory issues.
+                                        </br> </br>
+                                        Smooth Writing – Glides effortlessly on blackboards,
+                                        whiteboards, and other surfaces, ensuring clear and bold markings without
+                                        skipping or
+                                        breaking.
+                                    </p>
+                                </td>
 
-                                Easy to Erase – Wipes off cleanly without leaving heavy residue, making it ideal for
-                                classrooms, offices,
-                                and creative spaces.</br> </br>
+                                <td>
+                                    <p>Our Dustless Chalk is designed to provide a superior
+                                        writing and drawing
+                                        experience with minimal mess. Here are some key benefits:
+                                        </br> </br>
+                                        Cleaner & Healthier – Produces significantly less dust
+                                        compared to traditional chalk, reducing airborne particles that can cause
+                                        allergies or
+                                        respiratory issues.
+                                        </br> </br>
+                                        Smooth Writing – Glides effortlessly on blackboards,
+                                        whiteboards, and other surfaces, ensuring clear and bold markings without
+                                        skipping or
+                                        breaking.
+                                    </p>
+                                </td>
+                                <td>
+                                    <p>Our Dustless Chalk is designed to provide a superior
+                                        writing and drawing
+                                        experience with minimal mess. Here are some key benefits:
+                                        </br> </br>
+                                        Cleaner & Healthier – Produces significantly less dust
+                                        compared to traditional chalk, reducing airborne particles that can cause
+                                        allergies or
+                                        respiratory issues.
+                                        </br> </br>
+                                        Smooth Writing – Glides effortlessly on blackboards,
+                                        whiteboards, and other surfaces, ensuring clear and bold markings without
+                                        skipping or
+                                        breaking.
+                                    </p>
+                                </td>
+                            </tr>
+                        </tbody>
 
-                                Eco-Friendly & Non-Toxic – Safe for children and adults, made from non-toxic materials
-                                that meet safety
-                                standards.</br> </br>
-
-                                Versatile Use – Suitable for schools, offices, art projects, and
-                                industrial applications where clean and precise markings are needed.
-                            </p>
-                        </div>
-
+                    </table>
                     </div>
 
-
-                    <div class="tab-pane  " id="tab2">
-                        <div class="row d-flex align-items-start">
-                            <p class="paragraph col-lg-5 col-md-6">Our Dustless Chalk is designed to provide a superior
-                                writing and drawing
-                                experience with minimal mess. Here are some key benefits:
-                                </br> </br>
-                                Cleaner & Healthier – Produces significantly less dust
-                                compared to traditional chalk, reducing airborne particles that can cause allergies or
-                                respiratory issues.
-                                </br> </br>
-                                Smooth Writing – Glides effortlessly on blackboards,
-                                whiteboards, and other surfaces, ensuring clear and bold markings without skipping or
-                                breaking.
-                            </p>
-
-                            <div class="col-lg-1 d-none d-lg-block"></div>
-                            <p class="paragraph col-lg-5 col-md-6">Long-Lasting & Durable – Made with high-quality
-                                materials for enhanced durability, reducing frequent breakage and ensuring extended
-                                use.</br> </br>
-
-                                Easy to Erase – Wipes off cleanly without leaving heavy residue, making it ideal for
-                                classrooms, offices,
-                                and creative spaces.</br> </br>
-
-                                Eco-Friendly & Non-Toxic – Safe for children and adults, made from non-toxic materials
-                                that meet safety
-                                standards.</br> </br>
-
-                                Versatile Use – Suitable for schools, offices, art projects, and
-                                industrial applications where clean and precise markings are needed.
-                            </p>
-                        </div>
-
-                    </div>
 
                 </div>
             </div>
@@ -318,7 +364,7 @@
             </div>
         </section>
     </main>
-     <footer>
+    <footer>
         <div class="container-lg">
             <div class="row">
                 <!-- col-lg-3 -->
@@ -401,7 +447,7 @@
                         </div>
                     </div>
 
-                    <div class="main-btn">
+                    <div class="main-btn no-hover">
                         <a href="#" class="download-btn">
 
                             Download Our Profile
